# course_codes

INE5408/: ArrayList.h  ArrayNodeList.h  ArrayQueue.h  ArrayRingQueue.h  ArrayStack.h  ArrayStringList.h  BinaryTree.h  DoublyLinkedCircularList.h  DoublyLinkedList.h  LinkedCircularList.h  LinkedList.h  LinkedQueue.h
INE5408/Trab01/: CMakeLists.txt  dataset01.xml  dataset03.xml  main.cpp
INE5408/Trab01/doxygen-files/latex/: annotated.tex  class_x_m_l_object.tex  classstructures_1_1_linked_stack.tex  namespaces.tex  namespacestructures.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
INE5408/Trab01/libs_src/: CMakeLists.txt  LinkedStack.h  XMLObject.cpp  XMLObject.h
INE5409/: LUdecomp.py  root_finder.py
INE5409/Trab01/: main.py
INE5410/Lab01/: grade-intro-c.sh
INE5410/extra_class/: exercises  fork-exercise-test.cpp  fork-exercise.c  fork-tree-test.cpp  ftest
INE5411/: fib.asm
INE5411/Lab01/: cod1.asm  cod2.asm
INE5411/Lab02/: main.asm
INE5411/Lab03/: exercicio1-1.asm  exercicio1-2.asm  exercicio2-1.asm  exercicio2-2.asm  main1.asm  main2.asm
INE5413/trabalho1/: grafo1.txt  questao2.py  questao4.py  questao5.py  relatorio.md
INE5413/trabalho2/: grafo_simples.net  questao1.py  questao2.py  questao3.py  teste1.txt  teste2.txt
INE5413/trabalho3/: db128.gr  gr128_10.gr  grafo_simples.net  questao1.py  questao2.py  questao3.py  relatorio.md  test.py  teste_fluxo.gr  teste_fluxo.net
INE5416/prolog/: fib.pl  fib.py
INE5416/prova1/: q1  q1.hs  (+6 more)
INE5423/: ModeloConceitual.brM3  ModeloLogico.brM3  ficha_unimed.sql  logico.md
(+247 files in other folders)
